--- a/src/platform/swervebot/app/CMakeLists.txt
+++ b/src/platform/swervebot/app/CMakeLists.txt
@@ -6,3 +6,8 @@ add_executable(app_swerve_motion_visualizer
 target_link_libraries(app_swerve_motion_visualizer PRIVATE
     swervebot imview logging
 )
+
+add_executable(app_sbot_controller app_sbot_controller.cpp)
+target_link_libraries(app_sbot_controller PRIVATE
+    swervebot imview logging
+)
