--- a/src/platform/swervebot/test/CMakeLists.txt
+++ b/src/platform/swervebot/test/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(test_ws_sbot_base test_ws_sbot_base.cpp)
-target_link_libraries(test_ws_sbot_base PRIVATE swervebot)
+#add_executable(test_ws_sbot_base test_ws_sbot_base.cpp)
+#target_link_libraries(test_ws_sbot_base PRIVATE swervebot)
