--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,7 +81,7 @@ jobs:
           sudo apt-get update && sudo apt-get install -y libgl1-mesa-dev \
            libglfw3-dev libcairo2-dev libtbb-dev libasio-dev libboost-all-dev \
            libgsl-dev libeigen3-dev libtbb-dev libopencv-dev libyaml-cpp-dev \
-           libncurses-dev libevdev-dev libmodbus-dev libpcl-dev
+           libncurses-dev libevdev-dev libmodbus-dev libpcl-dev libglm-dev
       - name: Update submodules
         run: git submodule update --init --recursive
       - name: Create Build Environment
