--- a/src/platform/swervebot/config/sbot.yaml
+++ b/src/platform/swervebot/config/sbot.yaml
@@ -3,3 +3,14 @@ hid:
 robot_base:
   steering_motor_port: /dev/ttyUSB1
   driving_motor_port: /dev/ttyUSB0
+  max_driving_speed: 1.0
+  max_steering_angle: 1.57
+  driving_deadzone: 0.005
+  steering_deadzone: 0.005
+control:
+  manual_mode:
+    driving_scale: 1.0
+    steering_scale: 1.5
+  auto_mode:
+    driving_scale: 1.0
+    steering_scale: 1.0
