--- a/src/platform/swervebot/config/sbot.yaml
+++ b/src/platform/swervebot/config/sbot.yaml
@@ -1,5 +1,6 @@
 hid:
-  joystick_device: /dev/input/event21
+  joystick_device: /dev/input/event21c
+  sbus_port: /dev/ttyUSB0
 robot_base:
   steering_motor_port: /dev/ttyUSB0
   driving_motor_port: /dev/ttyUSB1
@@ -8,6 +9,7 @@ robot_base:
   driving_deadzone: 0.005
   steering_deadzone: 0.005
 control:
+  input_type: joystick # joystick or sbus
   manual_mode:
     driving_scale: 1.0
     steering_scale: 1.5
