--- a/src/platform/swervebot/config/sbot.yaml
+++ b/src/platform/swervebot/config/sbot.yaml
@@ -1,15 +1,15 @@
-hid:
-  joystick_device: /dev/input/event21c
-  sbus_port: /dev/ttyUSB0
 robot_base:
-  steering_motor_port: /dev/ttyUSB0
-  driving_motor_port: /dev/ttyUSB1
+  steering_motor_port: /dev/ttyUSB1
+  driving_motor_port: /dev/ttyUSB2
   max_driving_speed: 1.0
   max_steering_angle: 1.57
   driving_deadzone: 0.005
   steering_deadzone: 0.005
+hid:
+  joystick_device: /dev/input/event21
+  sbus_port: /dev/ttyUSB0
 control:
-  input_type: joystick # joystick or sbus
+  input_type: sbus # joystick or sbus
   manual_mode:
     driving_scale: 1.0
     steering_scale: 1.5
